<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="16dp"/>

        <Button android:id="@+id/btnMarcas"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/menu_marcas" android:onClick="lanzar"/>

        <Button android:id="@+id/btnVehiculos"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/menu_vehiculos" android:onClick="lanzar"/>

        <Button android:id="@+id/btnBuscarVehiculo"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/menu_buscar_vehiculo" android:onClick="lanzar"/>

        <Button android:id="@+id/btnInsertarVehiculo"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/menu_insertar_vehiculo" android:onClick="lanzar"/>

        <Button android:id="@+id/btnReparaciones"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/menu_reparaciones" android:onClick="lanzar"/>

        <Button android:id="@+id/btnInsertarReparacion"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/menu_insertar_reparacion" android:onClick="lanzar"/>

        <Button android:id="@+id/btnVentas"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/menu_ventas" android:onClick="lanzar"/>

        <Button android:id="@+id/btnInsertarVenta"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/menu_insertar_venta" android:onClick="lanzar"/>

        <Button android:id="@+id/btnEstadisticas"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/menu_estadisticas" android:onClick="lanzar"/>

    </LinearLayout>
</ScrollView>
